# hora-argentina

./: .gitignore  LICENSE.txt  README.md  config.txt  pyproject.toml  requirements.txt  solar_times.py
.devcontainer/: devcontainer.json
src/hora_argentina/: __init__.py  app.py  example_api_usage.py  example_plotly_chart.py  example_plotting.py  example_yearly_usage.py  from_api.py  noaa_plotly.py  noaa_solar_calculations.py  plot.py  plot_plotly.py  timeutils.py
