[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hora-argentina"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "streamlit>=1.28.0",
  "pytz>=2023.3",
  "streamlit-folium>=0.15.0",
  "folium>=0.14.0",
  "geopy>=2.3.0",
  "astropy>=5.0.0",
  "astroplan>=0.9.0",
  "bokeh==2.4.3",
  "numpy<2.0.0",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/hora-argentina#readme"
Issues = "https://github.com/U.N. Owen/hora-argentina/issues"
Source = "https://github.com/U.N. Owen/hora-argentina"

[tool.hatch.version]
path = "src/hora_argentina/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hora_argentina tests}"

[tool.coverage.run]
source_pkgs = ["hora_argentina", "tests"]
branch = true
parallel = true
omit = [
  "src/hora_argentina/__about__.py",
]

[tool.coverage.paths]
hora_argentina = ["src/hora_argentina", "*/hora-argentina/src/hora_argentina"]
tests = ["tests", "*/hora-argentina/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
